# validators-app-client

./: Cargo.toml  README.md  data-735-1.json  data-735.json  data.json  index.js  package-lock.json  package.json
.github/workflows/: ci.yaml
app/: layout.tsx  page.tsx
app/initialize-vault/: page.tsx
app/mint-to/: page.tsx
app/ncn/initialize/: page.tsx
app/operator/initialize/: page.tsx
app/operator/initialize-operator-vault-ticket/: page.tsx
app/vaults/: page.tsx
clients/restaking/: index.ts
clients/restaking/accounts/: Config.ts  Ncn.ts  NcnOperatorState.ts  NcnVaultSlasherTicket.ts  NcnVaultTicket.ts  Operator.ts  OperatorVaultTicket.ts  index.ts
clients/restaking/errors/: index.ts
clients/restaking/instructions/: CooldownNcnVaultSlasherTicket.ts  CooldownNcnVaultTicket.ts  CooldownOperatorVaultTicket.ts  InitializeConfig.ts  InitializeNcn.ts  InitializeNcnOperatorState.ts  InitializeOperator.ts  (+19 more)
clients/vault/: index.ts
components/: Header.tsx  SuccessToast.tsx
components/hello/: hello-data-access.tsx  hello-feature.tsx  hello-ui.tsx
components/ui/: cart.tsx  ui-layout.tsx
examples/: get_commission_changes.rs  get_validator.rs  get_validator_block_production_history.rs  get_validators.rs
modules/: replaceTemplate.js
restaking/: hello-exports.ts  index.ts
src/: commission_changes.rs  config.rs  epoch_credits.rs  error.rs  lib.rs  network.rs  ping_entry.rs  uptime_entry.rs  validator.rs  validator_block_production_history.rs  validator_list_response.rs
templates/: template-card.html  template-product.html
types/: jitoRestaking.ts
(+55 files in other folders)
